# papa

./: CHANGELOG.md  Cargo.toml
src/: main.rs
src/api/: model.rs
src/core/: actions.rs  config.rs  mod.rs  northstar.rs  utils.rs
src/core/commands/: config.rs  include.rs  mod.rs  profile.rs  search.rs  update.rs
src/core/commands/cluster/: add.rs  list.rs  new.rs
