[package]
name = "papa"
version = "2.3.0-alpha.1"
edition = "2021"
license = "MIT"
description = "A cli mod manager for the Northstar launcher"
readme = "README.md"
authors = ["AnActualEmerald"]
repository = "https://github.com/AnActualEmerald/papa"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive", "color"] }
convert_case = "0.5.0"
directories = "4.0.1"
env_logger = "0.9.0"
futures-util = "0.3.23"
indicatif = "0.17.0"
log = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["stream"] }
ron = "0.8.0"
rustyline = "10.0.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
zip = "0.6.2"

[features]
default = ["northstar", "cluster"]
northstar = []
launcher = ["northstar"]
cluster = []
profiles = []

[profile.release]
strip = true
lto = true
opt-level = "z"
